<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="12dp"
        android:background="@color/title_background">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/infoTitle"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/title_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/info_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_title1"
            android:textSize="19sp"
            android:textColor="#13140F"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/info_message1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_message1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/info_title1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/info_illustration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/illustration_info"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/info_message1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/info_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_title2"
            android:textSize="19sp"
            android:textColor="#13140F"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/info_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal|center_vertical"
            />

        <TextView
            android:id="@+id/info_message2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_message2"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/info_title2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>